gdk/gdkwindow.c
@@ -1794,19 +1794,55 @@ gdk_window_ensure_native (GdkWindow *window)
   return TRUE;
 }
 
+/**
+ * _gdk_event_filter_unref:
+ * @window: A #GdkWindow, or %NULL to be the global window
+ * @filter: A window filter
+ *
+ * Release a reference to @filter.  Note this function may
+ * mutate the list storage, so you need to handle this
+ * if iterating over a list of filters.
+ */
+void
+_gdk_event_filter_unref (GdkWindow       *window,
+			 GdkEventFilter  *filter)
+{
+  GList **filters;
+  GList *tmp_list;
+
+  if (window == NULL)
+    filters = &_gdk_default_filters;
+  else
+    filters = &window->filters;
+
+  for (tmp_list = *filters; tmp_list; tmp_list = tmp_list->next)
+    {
+      GdkEventFilter *iter_filter = tmp_list->data;
+      GList *node;
+
+      if (iter_filter != filter)
+	continue;
+
+      g_assert (iter_filter->ref_count > 0);
+
+      filter->ref_count--;
+      if (filter->ref_count != 0)
+	continue;
+
+      node = tmp_list;
+      tmp_list = tmp_list->next;
+
+      *filters = g_list_remove_link (*filters, node);
+      g_free (filter);
+      g_list_free_1 (node);
+    }
+}
+
 static void
 window_remove_filters (GdkWindow *window)
 {
-  if (window->filters)
-    {
-      GList *tmp_list;
-
-      for (tmp_list = window->filters; tmp_list; tmp_list = tmp_list->next)
-	g_free (tmp_list->data);
-
-      g_list_free (window->filters);
-      window->filters = NULL;
-    }
+  while (window->filters)
+    _gdk_event_filter_unref (window, window->filters->data);
 }
 
 static void
@@ -2486,16 +2522,8 @@ gdk_window_remove_filter (GdkWindow     *window,
       if ((filter->function == function) && (filter->data == data))
 	{
           filter->flags |= GDK_EVENT_FILTER_REMOVED;
-          filter->ref_count--;
-          if (filter->ref_count != 0)
-            return;
 
-	  if (window)
-	    window->filters = g_list_remove_link (window->filters, node);
-	  else
-	    _gdk_default_filters = g_list_remove_link (_gdk_default_filters, node);
-	  g_list_free_1 (node);
-	  g_free (filter);
+	  _gdk_event_filter_unref (window, filter);
 
 	  return;
 	}
